dark mode theme style fixes

--- a/src/styles/_artistInfo.scss
+++ b/src/styles/_artistInfo.scss
@@ -48,7 +48,7 @@
 	right: 0;
 	width: 20rem;
 	height: 100%;
-	background-color: rgb(255, 255, 255);
+	// background-color: rgb(255, 255, 255);
 	box-shadow: 2px 2px 50px rgb(207, 207, 207);
 	overflow: scroll;
 	transform: translateX(100%);
@@ -76,10 +76,16 @@
 			}
 		}
 		.more-button {
+			padding-top: 0.9rem;
 			order: 2;
 			width: 100%;
-			// border: 2px solid red;
+			transition: all 0.2s ease;
 			cursor: pointer;
+
+			&:hover {
+				// transition: all 0.2s ease;
+				filter: brightness(150%) contrast(50%);
+			}
 			svg {
 				height: 1rem;
 				width: 1rem;
@@ -104,7 +110,7 @@
 			margin-bottom: -2.1rem;
 			transition: transform 0.6s ease-in-out;
 			border: none;
-			color: #414141;
+			// color: #414141;
 			font-size: 1.6rem;
 			&:focus {
 				outline: none;
@@ -113,7 +119,7 @@
 			&:hover {
 				cursor: pointer;
 				background: none;
-				color: black;
+				// color: black;
 				-webkit-transform: rotate(180deg);
 				transform: rotate(180deg);
 			}
@@ -159,7 +165,7 @@
 		height: 40vh;
 		font-size: 0.99rem;
 		width: 90%;
-		color: #505050;
+		// color: #505050;
 		letter-spacing: 0.1rem;
 		word-spacing: 0.1rem;
 	}
@@ -169,7 +175,7 @@
 		padding-top: 0.5rem;
 		padding-bottom: 2rem;
 		max-height: 10vh;
-		color: rgb(34, 34, 34);
+		// color: rgb(34, 34, 34);
 	}
 }
 .media-container {
@@ -198,7 +204,7 @@
 		width: 100%;
 		// text-align: center;
 		margin-bottom: -0.5rem;
-		color: #222222;
+		// color: #222222;
 		margin-top: 1.5rem;
 	}
 	a {
