--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -4,7 +4,7 @@
 	left: 0;
 	width: 20rem;
 	height: 100%;
-	background-color: rgb(255, 255, 255);
+	// background-color: rgb(255, 255, 255);
 	box-shadow: 2px 2px 50px rgb(207, 207, 207);
 	overflow: scroll;
 	transform: translateX(-100%);
