--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,18 +3,18 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-h1,
-h2,
-h3 {
-	color: rgb(56, 56, 56);
-}
+// h1,
+// h2,
+// h3 {
+// 	color: rgb(56, 56, 56);
+// }
 body {
 	font-family: 'Lato', sans-serif;
 }
 h3,
 h4 {
 	font-weight: 400;
-	color: rgb(100, 100, 100);
+	// color: rgb(100, 100, 100);
 }
 .App {
 	transition: all 0.5s ease;
